Fixes output check on report commands. Closes #5040

--- a/docs/docs/cmd/entra/m365group/m365group-report-activitycounts.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitycounts.mdx
@@ -30,6 +30,14 @@ m365 aad m365group report activitycounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get the number of group activities across group workloads for the last week
