--- a/docs/docs/cmd/entra/m365group/m365group-report-activitydetail.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitydetail.mdx
@@ -33,6 +33,14 @@ m365 aad m365group report activitydetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get details about Microsoft 365 Groups activity by group for the last week
