--- a/docs/docs/cmd/entra/m365group/m365group-report-activityfilecounts.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activityfilecounts.mdx
@@ -30,6 +30,14 @@ m365 aad m365group report activityfilecounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get the total number of files and how many of them were active across all group sites associated with an Microsoft 365 Group for the last week
