--- a/docs/docs/cmd/entra/m365group/m365group-report-activitygroupcounts.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitygroupcounts.mdx
@@ -30,6 +30,14 @@ m365 aad m365group report activitygroupcounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get the daily total number of groups and how many of them were active based on activities for the last week
