--- a/docs/docs/cmd/entra/m365group/m365group-report-activitystorage.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-report-activitystorage.mdx
@@ -30,6 +30,14 @@ m365 aad m365group report activitystorage  [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get the total storage used across all group mailboxes and group sites for the last week
