--- a/docs/docs/cmd/onedrive/report/report-activityusercounts.mdx
+++ b/docs/docs/cmd/onedrive/report/report-activityusercounts.mdx
@@ -21,6 +21,14 @@ m365 onedrive report activityusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trend in the number of active OneDrive users for the last week
