--- a/docs/docs/cmd/onedrive/report/report-usageaccountcounts.mdx
+++ b/docs/docs/cmd/onedrive/report/report-usageaccountcounts.mdx
@@ -23,6 +23,14 @@ m365 onedrive report usageaccountcounts [options]
 
 ## Remarks
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
+## Remarks
+
 Any site on which users viewed, modified, uploaded, downloaded, shared, or synced files is considered an active site
 
 ## Examples
