--- a/docs/docs/cmd/onedrive/report/report-usageaccountdetail.mdx
+++ b/docs/docs/cmd/onedrive/report/report-usageaccountdetail.mdx
@@ -24,6 +24,14 @@ m365 onedrive report usageaccountdetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about OneDrive usage by account for the last week
