--- a/docs/docs/cmd/onedrive/report/report-usagestorage.mdx
+++ b/docs/docs/cmd/onedrive/report/report-usagestorage.mdx
@@ -21,6 +21,14 @@ m365 onedrive report usagestorage [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trend on the amount of storage you are using in OneDrive for Business for the last week
