--- a/docs/docs/cmd/outlook/report/report-mailactivitycounts.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailactivitycounts.mdx
@@ -12,6 +12,14 @@ Enables you to understand the trends of email activity (like how many were sent,
 m365 outlook report mailactivitycounts [options]
 ```
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Options
 
 ```md definition-list
