--- a/docs/docs/cmd/outlook/report/report-mailactivityusercounts.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailactivityusercounts.mdx
@@ -12,6 +12,14 @@ Enables you to understand trends on the number of unique users who are performin
 m365 outlook report mailactivityusercounts [options]
 ```
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Options
 
 ```md definition-list
