--- a/docs/docs/cmd/outlook/report/report-mailactivityuserdetail.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailactivityuserdetail.mdx
@@ -12,6 +12,14 @@ Gets details about email activity users have performed
 m365 outlook report mailactivityuserdetail [options]
 ```
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Options
 
 ```md definition-list
