--- a/docs/docs/cmd/outlook/report/report-mailappusageappsusercounts.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailappusageappsusercounts.mdx
@@ -11,6 +11,13 @@ Gets the count of unique users per email app
 ```sh
 m365 outlook report mailappusageappsusercounts [options]
 ```
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
 
 ## Options
 
