--- a/docs/docs/cmd/outlook/report/report-mailappusageuserdetail.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailappusageuserdetail.mdx
@@ -12,6 +12,14 @@ Gets details about which activities users performed on the various email apps
 m365 outlook report mailappusageuserdetail [options]
 ```
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Options
 
 ```md definition-list
