--- a/docs/docs/cmd/outlook/report/report-mailboxusagemailboxcount.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailboxusagemailboxcount.mdx
@@ -25,6 +25,12 @@ m365 outlook report mailboxusagemailboxcount [options]
 
 A mailbox is considered active if the user sent or read any email.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the total number of user mailboxes in your organization and how many are active each day for the last week.
