--- a/docs/docs/cmd/outlook/report/report-mailboxusagequotastatusmailboxcounts.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailboxusagequotastatusmailboxcounts.mdx
@@ -21,6 +21,14 @@ m365 outlook report mailboxusagequotastatusmailboxcounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the count of user mailboxes in each quota category for the last week
