--- a/docs/docs/cmd/outlook/report/report-mailboxusagestorage.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailboxusagestorage.mdx
@@ -21,6 +21,14 @@ m365 outlook report mailboxusagestorage [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the amount of mailbox storage used in your organization for the last week
