--- a/docs/docs/cmd/skype/report/report-activityuserdetail.mdx
+++ b/docs/docs/cmd/skype/report/report-activityuserdetail.mdx
@@ -24,6 +24,14 @@ m365 skype report activityuserdetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about Skype for Business activity by user for the last week
