--- a/docs/docs/cmd/spo/report/report-activityfilecounts.mdx
+++ b/docs/docs/cmd/spo/report/report-activityfilecounts.mdx
@@ -21,6 +21,14 @@ m365 spo report activityfilecounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of unique, licensed users who interacted with files stored on SharePoint sites for the last week
