--- a/docs/docs/cmd/spo/report/report-activitypages.mdx
+++ b/docs/docs/cmd/spo/report/report-activitypages.mdx
@@ -21,6 +21,14 @@ m365 spo report activitypages [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of unique pages visited by users for the last week
