--- a/docs/docs/cmd/spo/report/report-activityusercounts.mdx
+++ b/docs/docs/cmd/spo/report/report-activityusercounts.mdx
@@ -25,6 +25,12 @@ m365 spo report activityusercounts [options]
 
 A user is considered active if he or she has executed a file activity (save, sync, modify, or share) or visited a page within the specified time period
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trend in the number of active users for the last week
