--- a/docs/docs/cmd/spo/report/report-siteusagepages.mdx
+++ b/docs/docs/cmd/spo/report/report-siteusagepages.mdx
@@ -21,6 +21,14 @@ m365 spo report siteusagepages [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of pages viewed across all sites for the last week
