--- a/docs/docs/cmd/spo/report/report-siteusagestorage.mdx
+++ b/docs/docs/cmd/spo/report/report-siteusagestorage.mdx
@@ -21,6 +21,14 @@ m365 spo report siteusagestorage [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trend of storage allocated and consumed during the last week
