--- a/docs/docs/cmd/teams/report/report-deviceusagedistributionusercounts.mdx
+++ b/docs/docs/cmd/teams/report/report-deviceusagedistributionusercounts.mdx
@@ -21,6 +21,14 @@ m365 teams report deviceusagedistributionusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of Microsoft Teams unique users by device type for the last week.
