--- a/docs/docs/cmd/teams/report/report-deviceusageuserdetail.mdx
+++ b/docs/docs/cmd/teams/report/report-deviceusageuserdetail.mdx
@@ -28,6 +28,12 @@ m365 teams report deviceusageuserdetail [options]
 
 As this report is only available for the past 28 days, date parameter value should be a date from that range.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets information about Microsoft Teams device usage by user for the last week.
