--- a/docs/docs/cmd/teams/report/report-useractivitycounts.mdx
+++ b/docs/docs/cmd/teams/report/report-useractivitycounts.mdx
@@ -21,6 +21,14 @@ m365 teams report useractivitycounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of Microsoft Teams activities by activity type for the last week.
