--- a/docs/docs/cmd/teams/report/report-useractivityuserdetail.mdx
+++ b/docs/docs/cmd/teams/report/report-useractivityuserdetail.mdx
@@ -24,6 +24,14 @@ m365 teams report useractivityuserdetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about Microsoft Teams user activity by user for the last week.
