--- a/docs/docs/cmd/tenant/report/report-activeusercounts.mdx
+++ b/docs/docs/cmd/tenant/report/report-activeusercounts.mdx
@@ -21,6 +21,14 @@ m365 tenant report activeusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the count of daily active users in the reporting period by product for the last week
