--- a/docs/docs/cmd/tenant/report/report-activeuserdetail.mdx
+++ b/docs/docs/cmd/tenant/report/report-activeuserdetail.mdx
@@ -28,6 +28,12 @@ m365 tenant report activeuserdetail [options]
 
 As this report is only available for the past 28 days, date parameter value should be a date from that range.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about Microsoft 365 active users for the last week
