--- a/docs/docs/cmd/tenant/report/report-office365activationsusercounts.mdx
+++ b/docs/docs/cmd/tenant/report/report-office365activationsusercounts.mdx
@@ -16,6 +16,14 @@ m365 tenant report office365activationsusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get the count of users that are enabled and those that have activated the Office subscription on desktop or devices or shared computers
