--- a/docs/docs/cmd/tenant/report/report-office365activationsuserdetail.mdx
+++ b/docs/docs/cmd/tenant/report/report-office365activationsuserdetail.mdx
@@ -16,6 +16,14 @@ m365 tenant report office365activationsuserdetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get details about users who have activated Microsoft 365
