--- a/docs/docs/cmd/viva/engage/engage-report-activityusercounts.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-activityusercounts.mdx
@@ -21,6 +21,14 @@ m365 viva engage report activityusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trends on the number of unique users who posted, read, and liked Viva Engage messages for the last week
