--- a/docs/docs/cmd/viva/engage/engage-report-activityuserdetail.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-activityuserdetail.mdx
@@ -28,6 +28,12 @@ m365 viva engage report activityuserdetail [options]
 
 As this report is only available for the past 28 days, date parameter value should be a date from that range.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about Viva Engage activity by user for the last week
