--- a/docs/docs/cmd/viva/engage/engage-report-deviceusageusercounts.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-deviceusageusercounts.mdx
@@ -21,6 +21,14 @@ m365 viva engage report deviceusageusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of daily users by device type for the last week
