--- a/docs/docs/cmd/viva/engage/engage-report-groupsactivitycounts.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-groupsactivitycounts.mdx
@@ -21,6 +21,14 @@ m365 viva engage report groupsactivitycounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of Viva Engage messages posted, read, and liked in groups for the last week
