--- a/docs/docs/cmd/viva/engage/engage-report-groupsactivitygroupcounts.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-groupsactivitygroupcounts.mdx
@@ -21,6 +21,14 @@ m365 viva engage report groupsactivitygroupcounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the total number of groups that existed and how many included group conversation activity for the last week
