--- a/docs/docs/cmd/onedrive/report/report-activityfilecounts.mdx
+++ b/docs/docs/cmd/onedrive/report/report-activityfilecounts.mdx
@@ -21,6 +21,14 @@ m365 onedrive report activityfilecounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the number of unique, licensed users that performed file interactions against any OneDrive account for the last week
