--- a/docs/docs/cmd/onedrive/report/report-activityuserdetail.mdx
+++ b/docs/docs/cmd/onedrive/report/report-activityuserdetail.mdx
@@ -24,6 +24,14 @@ m365 onedrive report activityuserdetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about OneDrive activity by user for the last week
