--- a/docs/docs/cmd/onedrive/report/report-usagefilecounts.mdx
+++ b/docs/docs/cmd/onedrive/report/report-usagefilecounts.mdx
@@ -25,6 +25,12 @@ m365 onedrive report usagefilecounts [options]
 
 A file is considered active if it has been saved, synced, modified, or shared within the specified time period.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the total number of files across all sites and how many are active files for the last week
