--- a/docs/docs/cmd/outlook/report/report-mailappusageusercounts.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailappusageusercounts.mdx
@@ -12,6 +12,14 @@ Gets the count of unique users that connected to Exchange Online using any email
 m365 outlook report mailappusageusercounts [options]
 ```
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Options
 
 ```md definition-list
