--- a/docs/docs/cmd/outlook/report/report-mailappusageversionsusercounts.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailappusageversionsusercounts.mdx
@@ -12,6 +12,14 @@ Gets the count of unique users by Outlook desktop version.
 m365 outlook report mailappusageversionsusercounts [options]
 ```
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Options
 
 ```md definition-list
