--- a/docs/docs/cmd/outlook/report/report-mailboxusagedetail.mdx
+++ b/docs/docs/cmd/outlook/report/report-mailboxusagedetail.mdx
@@ -21,6 +21,14 @@ m365 outlook report mailboxusagedetail [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about mailbox usage for the last week
