--- a/docs/docs/cmd/skype/report/report-activitycounts.mdx
+++ b/docs/docs/cmd/skype/report/report-activitycounts.mdx
@@ -21,6 +21,14 @@ m365 skype report activitycounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trends on how many users organized and participated in conference sessions held in your organization through Skype for Business. The report also includes the number of peer-to-peer sessions for the last week
