--- a/docs/docs/cmd/spo/report/report-siteusagedetail.mdx
+++ b/docs/docs/cmd/spo/report/report-siteusagedetail.mdx
@@ -28,6 +28,12 @@ m365 spo report siteusagedetail [options]
 
 As this report is only available for the past 28 days, date parameter value should be a date from that range.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about SharePoint site usage for the last week
