--- a/docs/docs/cmd/spo/report/report-siteusagesitecounts.mdx
+++ b/docs/docs/cmd/spo/report/report-siteusagesitecounts.mdx
@@ -25,6 +25,12 @@ m365 spo report siteusagesitecounts [options]
 
 A file (user or system) is considered active if it has been saved, synced, modified, or shared within the specified time period.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the total number of files across all sites and the number of active files for the last week
