--- a/docs/docs/cmd/teams/report/report-pstncalls.mdx
+++ b/docs/docs/cmd/teams/report/report-pstncalls.mdx
@@ -30,6 +30,12 @@ This command only works with app-only permissions. You will need to create your 
 
 The difference between `fromDateTime` and `toDateTime` cannot exceed a period of 90 days.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get details about PSTN calls made between 2020-10-31 and today.
