--- a/docs/docs/cmd/tenant/report/report-office365activationcounts.mdx
+++ b/docs/docs/cmd/tenant/report/report-office365activationcounts.mdx
@@ -16,6 +16,14 @@ m365 tenant report office365activationcounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Get the count of Microsoft 365 activations on desktops and devices
