--- a/docs/docs/cmd/tenant/report/report-servicesusercounts.mdx
+++ b/docs/docs/cmd/tenant/report/report-servicesusercounts.mdx
@@ -21,6 +21,14 @@ m365 tenant report servicesusercounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the count of users by activity type and service for the last week
