--- a/docs/docs/cmd/viva/engage/engage-report-activitycounts.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-activitycounts.mdx
@@ -21,6 +21,14 @@ m365 viva engage report activitycounts [options]
 
 <Global />
 
+## Remarks
+
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets the trends on the amount of Viva Engage activity in your organization by how many messages were posted, read, and liked for the last week
