--- a/docs/docs/cmd/viva/engage/engage-report-groupsactivitydetail.mdx
+++ b/docs/docs/cmd/viva/engage/engage-report-groupsactivitydetail.mdx
@@ -28,6 +28,12 @@ m365 viva engage report groupsactivitydetail [options]
 
 As this report is only available for the past 28 days, date parameter value should be a date from that range.
 
+:::info
+
+This command supports only csv and json output.
+
+:::
+
 ## Examples
 
 Gets details about Viva Engage groups activity by group for the last week
