--- a/docs/docs/cmd/app/app-open.mdx
+++ b/docs/docs/cmd/app/app-open.mdx
@@ -4,14 +4,14 @@ import TabItem from '@theme/TabItem';
 
 # app open
 
-Returns deep link of the current AD app to open the Azure portal on the Microsoft Entra app registration management page.
+Returns deep link of the current Microsoft Entra app to open the Azure portal on the Microsoft Entra app registration management page.
 
 ## Usage
 
 ```sh
 m365 app open [options]
 ```
-
+t
 ## Options
 
 ```md definition-list
