--- a/docs/docs/cmd/pa/app/app-permission-remove.mdx
+++ b/docs/docs/cmd/pa/app/app-permission-remove.mdx
@@ -17,16 +17,16 @@ m365 pa app permission remove [options]
 : The name (GUID) of the Microsoft Power App.
 
 `--userId [userId]`
-: The Microsoft Entra ID ID of the user. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
+: The ID of the Microsoft Entra user. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
 
 `--userName [userName]`
 : The user principal name of the user. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
 
 `--groupId [groupId]`
-: The Microsoft Entra ID ID of the group. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
+: The ID of the Microsoft Entra group. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
 
 `--groupName [groupName]`
-: The name of the Microsoft Entra ID group. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
+: The name of the Microsoft Entra group. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
 
 `--tenant`
 : When specifying this, tenant permissions (everyone in the tenant) will be removed. Specify either `userId`, `userName`, `groupId`, `groupName`, or `tenant`.
