--- a/docs/docs/cmd/planner/roster/roster-member-add.mdx
+++ b/docs/docs/cmd/planner/roster/roster-member-add.mdx
@@ -19,7 +19,7 @@ m365 planner roster member add [options]
 : ID of the Planner Roster.
 
 `--userId [userId]`
-: User's Microsoft Entra ID ID. Specify either `userId`, `userName` but not both.
+: User's Microsoft Entra ID. Specify either `userId`, `userName` but not both.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. johndoe@example.com). Specify either `userId`, `userName` but not both.
