--- a/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-get.mdx
+++ b/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-get.mdx
@@ -19,7 +19,7 @@ m365 purview sensitivitylabel get [options]
 : The Id of the sensitivity label.
 
 `--userId [userId]`
-: User's Microsoft Entra ID ID. Optionally specify this if you want to get a list of sensitivity labels that the user has access to. Specify either `userId` or `userName` but not both.
+: User's Microsoft Entra ID. Optionally specify this if you want to get a list of sensitivity labels that the user has access to. Specify either `userId` or `userName` but not both.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. johndoe@example.com). Optionally specify this if you want to get a list of sensitivity labels that the user has access to. Specify either `userId` or `userName` but not both.
