--- a/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
@@ -26,10 +26,10 @@ m365 spo file roleassignment remove [options]
 : The SharePoint Id of the principal. It may be either a user id or group id. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `--upn [upn]`
-: Upn/email of the user. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The upn/email of the user. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The group name of an Microsoft Entra ID or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The group name of a Microsoft Entra or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirmation.
