--- a/docs/docs/cmd/spo/web/web-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/web/web-roleassignment-add.mdx
@@ -20,16 +20,16 @@ m365 spo web roleassignment add [options]
 : SharePoint ID of principal it may be either user id or group id we want to add permissions to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--upn [upn]`
-: upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: enter group name of Microsoft Entra ID or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of Microsoft Entra or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
 
 `--roleDefinitionName [roleDefinitionName]`
-: enter the name of a role definition, like 'Contribute', 'Read', etc. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
+: The name of a role definition, like 'Contribute', 'Read', etc. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
 ```
 
 <Global />
