--- a/docs/docs/concepts/authorization-tokens.mdx
+++ b/docs/docs/concepts/authorization-tokens.mdx
@@ -20,7 +20,7 @@ When you decide to use your own Microsoft Entra application, you need to choose 
 
 <br/>
 
-[![The 'public client' enabled for an Microsoft Entra application](../images/activate-public-client-aad-app.png)](../images/activate-public-client-aad-app.png)
+[![The 'public client' enabled for a Microsoft Entra application](../images/activate-public-client-aad-app.png)](../images/activate-public-client-aad-app.png)
 
 :::
 
@@ -59,7 +59,7 @@ After changing the ID of the Microsoft Entra application used by the CLI for Mic
 
 :::
 
-For instructions on how to create your own Microsoft Entra app see [Using your own Microsoft Entra ID identity](../user-guide/using-own-identity.mdx).
+For instructions on how to create your own Microsoft Entra app see [Using your own Microsoft Entra ID](../user-guide/using-own-identity.mdx).
 
 ### Access and refresh tokens in the CLI for Microsoft 365
 
