--- a/docs/docs/user-guide/github-actions.mdx
+++ b/docs/docs/user-guide/github-actions.mdx
@@ -190,7 +190,7 @@ The `CLI for Microsoft 365 Login` action provides an optional input to specify a
 
 Depending on the context, you will need to specify the tenant id.
 
-The `CLI for Microsoft 365 Login` allows you to indicate the targeting tenant (default `common`). It can be `organization` (if using an Microsoft Entra app which is multitenant) or a tenant id.
+The `CLI for Microsoft 365 Login` allows you to indicate the targeting tenant (default `common`). It can be `organization` (if using a Microsoft Entra app which is multitenant) or a tenant id.
 
 ```yaml
   name: CI
