--- a/docs/docs/cmd/entra/app/app-permission-add.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra app permission add
 
-Adds the specified application and/or delegated permissions to a specified Microsoft Entra app
+Adds the specified application and/or delegated permissions to a Microsoft Entra app
 
 ## Usage
 
@@ -46,19 +46,19 @@ Scopes/Roles to grant must be fully-qualified so that we can disambiguate them b
 
 ## Examples
 
-Grant multiple delegated API permissions to an Microsoft Entra app specified by client id
+Grant multiple delegated API permissions to a Microsoft Entra app specified by client id.
 
 ```sh
 m365 entra app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --delegatedPermissions 'https://management.azure.com/user_impersonation https://service.flow.microsoft.com/Flows.Read.All https://graph.microsoft.com/Agreement.Read.All'
 ```
 
-Grant multiple delegated API permissions to an Microsoft Entra app specified by object id
+Grant multiple delegated API permissions to a Microsoft Entra app specified by object id.
 
 ```sh
 m365 entra app permission add --appObjectId 'e0306bb2-bf0b-4cc5-a845-a0b2cf11f690' --delegatedPermissions 'https://management.azure.com/user_impersonation https://service.flow.microsoft.com/Flows.Read.All https://graph.microsoft.com/Agreement.Read.All'
 ```
 
-Grant multiple app-only permissions to an Microsoft Entra app specified by client id and grant admin consent
+Grant multiple app-only permissions to a Microsoft Entra app specified by client id and grant admin consent.
 
 ```sh
 m365 entra app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --applicationPermissions 'https://graph.microsoft.com/Sites.FullControl.All https://microsoft.sharepoint-df.com/Sites.FullControl.All' --grantAdminConsent
