--- a/docs/docs/cmd/entra/group/group-user-add.mdx
+++ b/docs/docs/cmd/entra/group/group-user-add.mdx
@@ -14,13 +14,13 @@ m365 entra group user add [options]
 
 ```md definition-list
 `-i, --groupId [groupId]`
-: The ID of the Entra ID group. Specify `groupId` or `groupDisplayName` but not both.
+: The ID of the Microsoft Entra group. Specify `groupId` or `groupDisplayName` but not both.
 
 `-n, --groupDisplayName [groupDisplayName]`
-: The display name of the Entra ID group. Specify `groupId` or `groupDisplayName` but not both.
+: The display name of the Microsoft Entra group. Specify `groupId` or `groupDisplayName` but not both.
 
 `--ids [ids]`
-: Microsoft Entra ID IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids` or `userNames` but not both.
+: Microsoft Entra IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids` or `userNames` but not both.
 
 `--userNames [userNames]`
 : The user principal names of users. You can also pass a comma-separated list of UPNs. Specify either `ids` or `userNames` but not both.
@@ -33,25 +33,25 @@ m365 entra group user add [options]
 
 ## Examples
 
-Add a single user specified by ID as a member to a group specified by display name
+Add a single user specified by ID as a member to a group specified by display name.
 
 ```sh
 m365 entra group user add --groupDisplayName Developers --ids 098b9f52-f48c-4401-819f-29c33794c3f5 --role Member
 ```
 
-Add multiple users specified by ID as members to a group specified by ID
+Add multiple users specified by ID as members to a group specified by ID.
 
 ```sh
 m365 entra group user add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --ids "098b9f52-f48c-4401-819f-29c33794c3f5,f1e06e31-3abf-4746-83c2-1513d71f38b8" --role Member
 ```
 
-Add a single user specified by UPN as an owner to a group specified by display name
+Add a single user specified by UPN as an owner to a group specified by display name.
 
 ```sh
 m365 entra group user add --groupDisplayName Developers --userNames john.doe@contoso.com --role Owner
 ```
 
-Adds multiple users specified by UPN as owners to a group specified by ID
+Adds multiple users specified by UPN as owners to a group specified by ID.
 
 ```sh
 m365 entra group user add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --userNames "john.doe@contoso.com,adele.vance@contoso.com" --role Owner
