--- a/docs/docs/cmd/external/connection/connection-add.mdx
+++ b/docs/docs/cmd/external/connection/connection-add.mdx
@@ -20,7 +20,7 @@ m365 search externalconnection add
 
 ```md definition-list
 `-i, --id <id>`
-: Developer-provided unique ID of the connection within the Microsoft Entra ID tenant.
+: Developer-provided unique ID of the connection within the Microsoft Entra tenant.
 
 `-n, --name <name>`
 : The display name of the connection to be displayed in the Microsoft 365 admin center. Maximum length of 128 characters.
