--- a/docs/docs/cmd/login.mdx
+++ b/docs/docs/cmd/login.mdx
@@ -65,7 +65,7 @@ To log in to Microsoft 365 using a certificate or secret, you will typically [cr
 
 Managed identity in Azure Cloud Shell is the identity of the user. It is neither system- nor user-assigned and it can't be configured. To log in to Microsoft 365 using managed identity in Azure Cloud Shell, set `authType` to `identity` and don't specify the `userName` option.
 
-When connecting to clouds other than `Public`, you'll need to use an Microsoft Entra IDt Entra ID application registered in a directory provisioned in that cloud. If you try to login using the default Microsoft Entra IDt Entra IDt Entra ID application, login will fail.
+When connecting to clouds other than `Public`, you'll need to use a Microsoft Entra application registered in a directory provisioned in that cloud. If you try to login using the default Microsoft Entra IDt Entra IDt Entra ID application, login will fail.
 
 :::tip
 
