--- a/docs/docs/cmd/planner/roster/roster-member-remove.mdx
+++ b/docs/docs/cmd/planner/roster/roster-member-remove.mdx
@@ -17,7 +17,7 @@ m365 planner roster member remove [options]
 : ID of the Planner Roster.
 
 `--userId [userId]`
-: User's Microsoft Entra ID ID. Specify either `userId` or `userName` but not both.
+: User's Microsoft Entra ID. Specify either `userId` or `userName` but not both.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. johndoe@example.com). Specify either `userId` or `userName` but not both.
@@ -44,7 +44,7 @@ The Planner Roster will be deleted when it doesn't have any users remaining in t
 
 ## Examples
 
-Remove a Roster member by its Microsoft Entra ID ID.
+Remove a Roster member by its Microsoft Entra ID.
 
 ```sh
 m365 planner roster member remove --rosterId tYqYlNd6eECmsNhN_fcq85cAGAnd --userId 126878e5-d8f9-4db2-951d-d25486488d38
