--- a/docs/docs/cmd/pp/managementapp/managementapp-add.mdx
+++ b/docs/docs/cmd/pp/managementapp/managementapp-add.mdx
@@ -37,19 +37,19 @@ If the command finds multiple Microsoft Entra application registrations with the
 
 ## Examples
 
-Register CLI for Microsoft 365 as a management application for the Power Platform
+Register CLI for Microsoft 365 as a management application for the Power Platform.
 
 ```sh
 m365 pp managementapp add --appId 31359c7f-bd7e-475c-86db-fdb8c937548e
 ```
 
-Register Microsoft Entra application with the specified object ID as a management application for the Power Platform
+Register a Microsoft Entra application with the specified object ID as a management application for the Power Platform.
 
 ```sh
 m365 pp managementapp add --objectId d75be2e1-0204-4f95-857d-51a37cf40be8
 ```
 
-Register Microsoft Entra application named _My app_ as a management application for the Power Platform
+Register a Microsoft Entra application named _My app_ as a management application for the Power Platform.
 
 ```sh
 m365 pp managementapp add --name "My app"
