--- a/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
@@ -32,10 +32,10 @@ m365 spo listitem roleassignment remove [options]
 : SharePoint ID of principal it may be either user id or group id we want to remove permissions. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--upn [upn]`
-: upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: enter group name of Microsoft Entra ID or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of Microsoft Entra or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirming removing the role assignment.
