--- a/docs/docs/cmd/spo/tenant/tenant-settings-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-settings-set.mdx
@@ -59,7 +59,7 @@ m365 spo tenant settings set [options]
 : Creates a Shared with Everyone folder in every user's new OneDrive for Business document library. The valid values are: True (default) - The Shared with Everyone folder is created. False - No folder is created when the site and OneDrive for Business document library are created. Allowed values `true`, `false`.
 
 `--SignInAccelerationDomain [SignInAccelerationDomain]`
-: Specifies the home realm discovery value to be sent to Microsoft Entra ID (AAD) during the user sign-in process. When the organization uses a third-party identity provider, this prevents the user from seeing the Microsoft Entra ID Home Realm Discovery web page and ensures the user only sees their company's Identity Provider's portal. This value can also be used with Microsoft Entra ID Premium to customize the Microsoft Entra ID login page. Acceleration will not occur on-site collections that are shared externally. This value should be configured with the login domain that is used by your company (that is, example@contoso.com). If your company has multiple third-party identity providers, configuring the sign-in acceleration value will break sign-in for your organization. The valid values are: "" (default) - Blank by default, this will also remove or clear any value that has been set. Login Domain - For example: "contoso.com". No value assigned by default.
+: Specifies the home realm discovery value to be sent to Microsoft Entra ID during the user sign-in process. When the organization uses a third-party identity provider, this prevents the user from seeing the Microsoft Entra Home Realm Discovery web page and ensures the user only sees their company's Identity Provider's portal. This value can also be used with Microsoft Entra ID Premium to customize the Microsoft Entra ID login page. Acceleration will not occur on-site collections that are shared externally. This value should be configured with the login domain that is used by your company (that is, example@contoso.com). If your company has multiple third-party identity providers, configuring the sign-in acceleration value will break sign-in for your organization. The valid values are: "" (default) - Blank by default, this will also remove or clear any value that has been set. Login Domain - For example: "contoso.com". No value assigned by default.
 
 `--EnableGuestSignInAcceleration [EnableGuestSignInAcceleration]`
 : Accelerates guest-enabled site collections as well as member-only site collections when the SignInAccelerationDomain parameter is set. Allowed values `true`, `false`.
@@ -263,7 +263,7 @@ m365 spo tenant settings set [options]
 : Enables or disables comments on lists. Allowed values `true`, `false`.
 
 `--EnableAzureADB2BIntegration [EnableAzureADB2BIntegration]`
-: Enables the preview for OneDrive and SharePoint integration with Microsoft Entra B2B. Allowed values `true`, `false`. Microsoft Entra ID one-time passcode needs to be enabled for this integration to work. For more information see [http://aka.ms/spo-b2b-integration](https://aka.ms/spo-b2b-integration).
+: Enables the preview for OneDrive and SharePoint integration with Microsoft Entra B2B. Allowed values `true`, `false`. Microsoft Entra one-time passcode needs to be enabled for this integration to work. For more information see [http://aka.ms/spo-b2b-integration](https://aka.ms/spo-b2b-integration).
 
 `--SyncAadB2BManagementPolicy [SyncAadB2BManagementPolicy]`
 : Syncs Azure B2B Management Policies. Allowed values `true`, `false`. For more information, see [SharePoint and OneDrive integration with Microsoft Entra B2B](https://aka.ms/spo-b2b-integration).
