--- a/docs/docs/cmd/teams/channel/channel-member-remove.mdx
+++ b/docs/docs/cmd/teams/channel/channel-member-remove.mdx
@@ -29,7 +29,7 @@ m365 teams channel member remove [options]
 : User's UPN (user principal name, e.g. johndoe@example.com). Specify either userName, userId or id but not multiple.
 
 `--userId [userId]`
-: User's Microsoft Entra ID Id. Specify either userName, userId or id but not multiple.
+: User's Microsoft Entra ID. Specify either userName, userId or id but not multiple.
 
 `--id [id]`
 : Channel member Id of a user. Specify either userName, userId or id but not multiple.
