--- a/docs/docs/user-guide/cli-certificate-caveats.mdx
+++ b/docs/docs/user-guide/cli-certificate-caveats.mdx
@@ -7,7 +7,7 @@ sidebar_position: 11
 
 ## I get error "AADSTS700027 Client assertion contains an invalid signature" when I login the CLI with certificate, what am I doing wrong
 
-There is an article ["Using your own Microsoft Entra ID identity"](./using-own-identity.mdx) dedicated to using the CLI with your own identity, and you should have a look at it and see if it can help you. Many of the cases we've seen in the Github issues list are that people forget to set the `CLIMICROSOFT365_AADAPPID` or `CLIMICROSOFT365_TENANT` environment variables. Setting these variables could be as easy as adding them before your command on the bash command line like `CLIMICROSOFT365_AADAPPID=value1 CLIMICROSOFT365_TENANT=value2 m365 command` (see [#1532](https://github.com/pnp/cli-microsoft365/issues/1532) or [#1496](https://github.com/pnp/cli-microsoft365/issues/1496#issuecomment-625549739)). If you are Windows user the syntax should be like `set CLIMICROSOFT365_AADAPPID=value1` and `set CLIMICROSOFT365_TENANT=value2` then your cli command ([#1121](https://github.com/pnp/cli-microsoft365/issues/1121#issuecomment-533609882)).
+There is an article ["Using your own Microsoft Entra ID"](./using-own-identity.mdx) dedicated to using the CLI with your own identity, and you should have a look at it and see if it can help you. Many of the cases we've seen in the Github issues list are that people forget to set the `CLIMICROSOFT365_AADAPPID` or `CLIMICROSOFT365_TENANT` environment variables. Setting these variables could be as easy as adding them before your command on the bash command line like `CLIMICROSOFT365_AADAPPID=value1 CLIMICROSOFT365_TENANT=value2 m365 command` (see [#1532](https://github.com/pnp/cli-microsoft365/issues/1532) or [#1496](https://github.com/pnp/cli-microsoft365/issues/1496#issuecomment-625549739)). If you are Windows user the syntax should be like `set CLIMICROSOFT365_AADAPPID=value1` and `set CLIMICROSOFT365_TENANT=value2` then your cli command ([#1121](https://github.com/pnp/cli-microsoft365/issues/1121#issuecomment-533609882)).
 
 ## I get "Error: AADSTS700025: Client is public so 'client_assertion' should not be presented"
 
