Changes requested by Milan

--- a/docs/docs/cmd/spo/folder/folder-add.mdx
+++ b/docs/docs/cmd/spo/folder/folder-add.mdx
@@ -44,7 +44,7 @@ When you specify a value for `color`, consider the following:
 | Dark blue    | 5            | darkBlue     |
 | Dark purple  | 6            | darkPurple   |
 | Dark pink    | 7            | darkPink     |
-| Grey         | 8            | darkGrey     |
+| Grey         | 8            | grey         |
 | Light red    | 9            | lightRed     |
 | Light orange | 10           | lightOrange  |
 | Light green  | 11           | lightGreen   |
