--- a/docs/docs/cmd/cli/cli-reconsent.mdx
+++ b/docs/docs/cmd/cli/cli-reconsent.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # cli reconsent
 
-Returns Microsoft Entra URL to open in the browser to re-consent CLI for Microsoft 365 permissions
+Returns Microsoft Entra URL to open in the browser to re-consent CLI for Microsoft 365 Microsoft Entra permissions
 
 ## Usage
 
