--- a/docs/docs/cmd/teams/chat/chat-member-remove.mdx
+++ b/docs/docs/cmd/teams/chat/chat-member-remove.mdx
@@ -45,7 +45,7 @@ Remove a member from a Teams chat by its Microsoft Entra ID.
 m365 teams chat member remove --chatId 19:8b081ef6-4792-4def-b2c9-c363a1bf41d5_5031bb31-22c0-4f6f-9f73-91d34ab2b32d@unq.gbl.spaces --userId bd94e214-7852-48b0-a326-5a34b2a02183
 ```
 
-Remove a member from a Teams chat by its Microsoft Entra ID UPN.
+Remove a member from a Teams chat by its Microsoft Entra UPN.
 
 ```sh
 m365 teams chat member remove --chatId 19:8b081ef6-4792-4def-b2c9-c363a1bf41d5_5031bb31-22c0-4f6f-9f73-91d34ab2b32d@unq.gbl.spaces --userName john.doe@contoso.com
