--- a/docs/docs/cmd/teams/report/report-directroutingcalls.mdx
+++ b/docs/docs/cmd/teams/report/report-directroutingcalls.mdx
@@ -26,7 +26,7 @@ m365 teams report directroutingcalls [options]
 
 ## Remarks
 
-This command only works with app-only permissions. You will need to create your own Microsoft Entra app with `CallRecords.Read.All` permission assigned. Instructions on how to create your own Microsoft Entra app can be found at [Using your own Microsoft Entra ID](../../../user-guide/using-own-identity.mdx)
+This command only works with app-only permissions. You will need to create your own Microsoft Entra app with `CallRecords.Read.All` permission assigned. Instructions on how to create your own Microsoft Entra app can be found at [Using your own Microsoft Entra identity](../../../user-guide/using-own-identity.mdx)
 
 The difference between `fromDateTime` and `toDateTime` cannot exceed a period of 90 days.
 
