--- a/docs/docs/user-guide/connecting-microsoft-365.mdx
+++ b/docs/docs/user-guide/connecting-microsoft-365.mdx
@@ -14,7 +14,7 @@ Before you can use CLI for Microsoft 365 commands to manage your tenant, you hav
 
 Using the CLI for Microsoft 365 you can manage different areas of an Microsoft 365 tenant. Currently, commands for working with SharePoint Online, Microsoft Entra ID, Microsoft Graph and the Azure Management Service are available, but more commands for other services will be added in the future.
 
-Commands in the CLI for Microsoft 365 are organized into services. For example, all commands that manage SharePoint Online begin with `spo` (`spo app list`, `spo cdn get`, etc.) and commands for working with the Microsoft Entra ID begin with `aad`. After logging in to Microsoft 365, you can communicate with any Microsoft 365 service supported by the CLI for Microsoft 365 and it will automatically retrieve the necessary access token.
+Commands in the CLI for Microsoft 365 are organized into services. For example, all commands that manage SharePoint Online begin with `spo` (`spo app list`, `spo cdn get`, etc.) and commands for working with the Microsoft Entra ID begin with `entra`. After logging in to Microsoft 365, you can communicate with any Microsoft 365 service supported by the CLI for Microsoft 365 and it will automatically retrieve the necessary access token.
 
 ### Log in to Microsoft 365
 
