--- a/docs/docs/user-guide/github-actions.mdx
+++ b/docs/docs/user-guide/github-actions.mdx
@@ -56,7 +56,7 @@ Repeat the above step to also store the account password which should be named `
 
 ##### Application secrets
 
-Using the `Add new secret` link, enter the `APP_ID` into the `Name` field and the (client) id of the Microsoft Entra to connect to your Microsoft 365 tenant with, e.g. `d355e6f0-0aec-4b1f-b458-7040f91bc297`.
+Using the `Add new secret` link, enter the `APP_ID` into the `Name` field and the (client) id of the Microsoft Entra application to connect to your Microsoft 365 tenant with, e.g. `d355e6f0-0aec-4b1f-b458-7040f91bc297`.
 
 Repeat the above step to also store the application's encoded certificate which should be named `CERTIFICATE_ENCODED` and the tenant id which should be named `TENANT_ID`. If your certificate is encrypted with a password, then repeat one last time the previous step with a secret called `CERTIFICATE_PASSWORD`.
 
