--- a/docs/docs/cmd/login.mdx
+++ b/docs/docs/cmd/login.mdx
@@ -34,7 +34,7 @@ m365 login [options]
 : Certificate thumbprint. If not specified, and `authType` is set to `certificate`, it will be automatically calculated based on the specified certificate
 
 `-s, --secret [secret]`
-: Client Secret of the Microsoft Entra IDt Entra IDt Entra IDt Entra IDt Entra IDt Entra IDt Entra ID application to use for authentication. Required when `authType` is set to `secret`.
+: Client Secret of the Microsoft Entra application to use for authentication. Required when `authType` is set to `secret`.
 
 `--appId [appId]`
 : App ID of the Microsoft Entra application to use for authentication. If not specified, use the app specified in the `CLIMICROSOFT365_AADAPPID` environment variable. If the environment variable is not defined, use the multitenant PnP Management Shell app
@@ -65,7 +65,7 @@ To log in to Microsoft 365 using a certificate or secret, you will typically [cr
 
 Managed identity in Azure Cloud Shell is the identity of the user. It is neither system- nor user-assigned and it can't be configured. To log in to Microsoft 365 using managed identity in Azure Cloud Shell, set `authType` to `identity` and don't specify the `userName` option.
 
-When connecting to clouds other than `Public`, you'll need to use a Microsoft Entra application registered in a directory provisioned in that cloud. If you try to login using the default Microsoft Entra IDt Entra IDt Entra ID application, login will fail.
+When connecting to clouds other than `Public`, you'll need to use a Microsoft Entra application registered in a directory provisioned in that cloud. If you try to login using the default Microsoft Entra application, login will fail.
 
 :::tip
 
