--- a/docs/docs/concepts/authorization-tokens.mdx
+++ b/docs/docs/concepts/authorization-tokens.mdx
@@ -59,7 +59,7 @@ After changing the ID of the Microsoft Entra application used by the CLI for Mic
 
 :::
 
-For instructions on how to create your own Microsoft Entra app see [Using your own Microsoft Entra ID](../user-guide/using-own-identity.mdx).
+For instructions on how to create your own Microsoft Entra app see [Using your own Microsoft Entra identity](../user-guide/using-own-identity.mdx).
 
 ### Access and refresh tokens in the CLI for Microsoft 365
 
@@ -67,7 +67,7 @@ After completing the OAuth flow, the CLI receives from Microsoft Entra ID a refr
 
 ## Services and commands
 
-Each command in the CLI for Microsoft 365 belongs to a service, for example the [spo site add](../cmd/spo/site/site-add.mdx) command, which creates a new modern site, belongs to the SharePoint Online service, while the [entra enterpriseapp get](../cmd/entra/enterpriseapp/enterpriseapp-get.mdx) command, which lists Microsoft Entra ID service principals, belongs to the Microsoft Entra ID Graph service. Each service in Microsoft 365 is a different Microsoft Entra ID authorization resource and requires a separate access token. When working with the CLI, you can be simultaneously connected to multiple services. Each command in the CLI knows which Microsoft 365 service it communicates with and for which resource it should have a valid access token.
+Each command in the CLI for Microsoft 365 belongs to a service, for example the [spo site add](../cmd/spo/site/site-add.mdx) command, which creates a new modern site, belongs to the SharePoint Online service, while the [entra enterpriseapp get](../cmd/entra/enterpriseapp/enterpriseapp-get.mdx) command, which lists Microsoft Entra ID service principals, belongs to the Azure Active Directory Graph service. Each service in Microsoft 365 is a different Microsoft Entra ID authorization resource and requires a separate access token. When working with the CLI, you can be simultaneously connected to multiple services. Each command in the CLI knows which Microsoft 365 service it communicates with and for which resource it should have a valid access token.
 
 ## Communicating with Microsoft 365
 
