--- a/docs/docs/user-guide/using-own-identity.mdx
+++ b/docs/docs/user-guide/using-own-identity.mdx
@@ -1,9 +1,9 @@
 ---
-title: Use your own Microsoft Entra ID
+title: Use your own Microsoft Entra identity
 sidebar_position: 10
 ---
 
-# Use your own Microsoft Entra ID
+# Use your own Microsoft Entra identity
 
 When you use the CLI for Microsoft 365 to connect to your tenant for the first time, you are presented with a `Permissions requested` prompt from Azure, by accepting this prompt you are consenting to using the `PnP Microsoft 365 Management Shell` Microsoft Entra application with your tenant as well as the permissions that it requires.
 
