Comments from Milan

--- a/docs/docs/about/comparison-powershell.mdx
+++ b/docs/docs/about/comparison-powershell.mdx
@@ -706,7 +706,7 @@ Remove-PnPWebhookSubscription|PnP.PowerShell|[spo list webhook remove](../cmd/sp
 Remove-PnPWebPart|PnP.PowerShell|
 Remove-PnPWikiPage|PnP.PowerShell|
 Rename-PnPFile|PnP.PowerShell|[spo file rename](../cmd/spo/file/file-rename.mdx)
-Rename-PnPFolder|PnP.PowerShell|[spo folder rename](../cmd/spo/folder/folder-set.mdx)
+Rename-PnPFolder|PnP.PowerShell|[spo folder set](../cmd/spo/folder/folder-set.mdx)
 Rename-PnPTenantSite|PnP.PowerShell|[spo site rename](../cmd/spo/site/site-rename.mdx)
 Repair-PnPSite|PnP.PowerShell|
 Request-PnPAccessToken|PnP.PowerShell|[util accesstoken get](../cmd/util/accesstoken/accesstoken-get.mdx)
