--- a/docs/docs/cmd/spo/folder/folder-set.mdx
+++ b/docs/docs/cmd/spo/folder/folder-set.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo folder set
 
-Updates a folder.
+Updates a folder
 
 ## Usage
 
@@ -20,13 +20,13 @@ m365 spo folder rename [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: The URL of the site where the folder to be renamed is located.
+: The URL of the site where the folder is located.
 
 `--url <url>`
-: The server- or site-relative decoded URL of the folder (including the folder).
+: The server- or site-relative decoded URL of the folder.
 
 `-n, --name [name]`
-: New name for the target folder.
+: New name for the folder.
 
 `--color [color]`
 : Visual color of the folder. Valid values are a color name or a number. Check remarks for more info.
@@ -48,7 +48,7 @@ When you specify a value for `color`, consider the following:
 | Dark blue    | 5            | darkBlue     |
 | Dark purple  | 6            | darkPurple   |
 | Dark pink    | 7            | darkPink     |
-| Grey         | 8            | darkGrey     |
+| Grey         | 8            | grey         |
 | Light red    | 9            | lightRed     |
 | Light orange | 10           | lightOrange  |
 | Light green  | 11           | lightGreen   |
@@ -59,7 +59,7 @@ When you specify a value for `color`, consider the following:
 
 ## Examples
 
-Set the folder name to 'My Folder 2'.
+Set the folder name to 'My Folder 2'
 
 ```sh
 m365 spo folder set --webUrl https://contoso.sharepoint.com/sites/project-x --url '/Shared Documents/My Folder 1' --name 'My Folder 2'
