Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,10 @@ sidebar_position: 4
 
 ### New commands
 
+**Outlook:**
+
+- [outlook message remove](../cmd/outlook/message/message-remove.mdx) - permanently removes a specific message from a mailbox [#5784](https://github.com/pnp/cli-microsoft365/issues/5784)
+
 **Purview:**
 
 - [purview threatassessment add](../cmd/purview/threatassessment/threatassessment-add.mdx) - creates a threat assessment [#4428](https://github.com/pnp/cli-microsoft365/issues/4428)
@@ -19,12 +23,19 @@ sidebar_position: 4
 
 ### Changes
 
-- refactored 'auth' and 'chili' files to async/await. [#5145](https://github.com/pnp/cli-microsoft365/issues/5145)
-- refactored 'cli' files to async/await. [#5146](https://github.com/pnp/cli-microsoft365/issues/5146)
-- updated docs dependencies.
-- fixed retrieving new app only access token. [#5891](https://github.com/pnp/cli-microsoft365/issues/5891)
-- added new script sample to generate the retirement report. [#5774](https://github.com/pnp/cli-microsoft365/issues/5774)
-- added more options to 'spo user remove'. [#5522](https://github.com/pnp/cli-microsoft365/issues/5522)
+- refactored 'auth' and 'chili' files to async/await [#5145](https://github.com/pnp/cli-microsoft365/issues/5145)
+- refactored 'cli' files to async/await [#5146](https://github.com/pnp/cli-microsoft365/issues/5146)
+- fixed retrieving new app only access token [#5891](https://github.com/pnp/cli-microsoft365/issues/5891)
+- added new script sample to generate the retirement report [#5774](https://github.com/pnp/cli-microsoft365/issues/5774)
+- added more options to 'spo user remove' [#5522](https://github.com/pnp/cli-microsoft365/issues/5522)
+- renamed `Azure Active Directory` to `Microsoft Entra ID` in docs [#5780](https://github.com/pnp/cli-microsoft365/issues/5780)
+- renamed `AAD` environment variables to `ENTRA` [#5917](https://github.com/pnp/cli-microsoft365/issues/5917)
+- enhanced [spo folder add](../cmd/spo/folder/folder-add.mdx) with support for setting folder color [#5894](https://github.com/pnp/cli-microsoft365/issues/5894)
+- enhanced [spo folder set](../cmd/spo/folder/folder-set.mdx) with support for setting folder color [#5895](https://github.com/pnp/cli-microsoft365/issues/5895)
+- updated planner roster IDs in docs [#5910](https://github.com/pnp/cli-microsoft365/issues/5910)
+- enhanced [spo site recyclebinitem restore](../cmd/spo/site/site-recyclebinitem-restore.mdx) with support for restoring recycle bin stages [#4726](https://github.com/pnp/cli-microsoft365/issues/4726)
+- added deprecation warning for deprecated 'aad' commands [#5762](https://github.com/pnp/cli-microsoft365/issues/5762)
+- enhanced [teams tab get](../cmd/teams/tab/tab-get.mdx) command output with teams app information [#5855](https://github.com/pnp/cli-microsoft365/issues/5855)
 
 ## [v7.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.5.0)
 
