Removes old config value from setup command. Closes #5928

--- a/docs/docs/cmd/setup.mdx
+++ b/docs/docs/cmd/setup.mdx
@@ -14,10 +14,10 @@ m365 setup [options]
 
 ```md definition-list
 `--interactive`
-: Configure CLI for Microsoft 365 for interactive use without prompting for additional information
+: Configure CLI for Microsoft 365 for interactive use without prompting for additional information.
 
 `--scripting`
-: Configure CLI for Microsoft 365 for use in scripts without prompting for additional information
+: Configure CLI for Microsoft 365 for use in scripts without prompting for additional information.
 ```
 
 <Global />
@@ -49,7 +49,6 @@ The `m365 setup` command uses the following presets:
 - interactive use:
   - autoOpenLinksInBrowser: true,
   - copyDeviceCodeToClipboard: true,
-  - interactive: true,
   - output: 'text',
   - printErrorsAsPlainText: true,
   - prompt: true,
@@ -58,7 +57,6 @@ The `m365 setup` command uses the following presets:
 - scripting use:
   - autoOpenLinksInBrowser: false,
   - copyDeviceCodeToClipboard: false,
-  - interactive: false,
   - output: 'json',
   - printErrorsAsPlainText: false,
   - prompt: false,
