Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -36,6 +36,9 @@ sidebar_position: 4
 - enhanced [spo site recyclebinitem restore](../cmd/spo/site/site-recyclebinitem-restore.mdx) with support for restoring recycle bin stages [#4726](https://github.com/pnp/cli-microsoft365/issues/4726)
 - added deprecation warning for deprecated 'aad' commands [#5762](https://github.com/pnp/cli-microsoft365/issues/5762)
 - enhanced [teams tab get](../cmd/teams/tab/tab-get.mdx) command output with teams app information [#5855](https://github.com/pnp/cli-microsoft365/issues/5855)
+- enhanced [teams team add](../cmd/teams/team/team-add.mdx) to be used with application permissions and allowing members or owners to be set after creation [#4916](https://github.com/pnp/cli-microsoft365/issues/4916)
+- updated [spfx project github workflow add](../cmd/spfx/project/project-github-workflow-add.mdx) command [#5776](https://github.com/pnp/cli-microsoft365/issues/5776)
+- fixed output check on report commands [#5040](https://github.com/pnp/cli-microsoft365/issues/5040)
 
 ## [v7.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.5.0)
 
